# SpotifyMusicProject

./: CMakeLists.txt  artistpage.cpp  artistpage.h  artistpage.ui  listenerpage.cpp  listenerpage.h  listenerpage.ui  loginpage.cpp  loginpage.h  loginpage.ui  mainwindow.cpp  mainwindow.h  registerpage.cpp  registerpage.h  registerpage.ui  songlistpage.cpp  songlistpage.h  songlistpage.ui
entities/: Account.h  Album.h  Artist.h  Listener.h  Playlist.h  Song.h
exceptions/: Exceptions.h
repositories/: AbstractRepository.h  AccountRepository.h  AlbumRepository.h  ArtistRepository.h  ListenerRepository.h  PlaylistRepository.h  SongRepository.h
services/: ArtistService.h  AuthService.h  ListenerService.h  SortFilterUtils.h
